Alteração na tabela monitoramento e conficção inicial do email

--- a/Views/Monitoramento/Create.cshtml
+++ b/Views/Monitoramento/Create.cshtml
@@ -17,7 +17,7 @@
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="Id1" class="control-label"></label>
                 <input asp-for="Id1" class="form-control" />
                 <span asp-validation-for="Id1" class="text-danger"></span>
@@ -26,7 +26,7 @@
                 <label asp-for="Id2" class="control-label"></label>
                 <input asp-for="Id2" class="form-control" />
                 <span asp-validation-for="Id2" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
