--- a/Views/Monitoramento/Delete.cshtml
+++ b/Views/Monitoramento/Delete.cshtml
@@ -17,18 +17,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nome)
         </dd>
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id1)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id1)
-        </dd>
-        <dt class = "col-sm-2">
+        </dd> *@
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id2)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id2)
-        </dd>
+        </dd> *@
     </dl>
     
     <form asp-action="Delete">
