Corrigindo problemas detectados na construção do projeto

--- a/Views/Monitoramento/Create.cshtml
+++ b/Views/Monitoramento/Create.cshtml
@@ -17,16 +17,26 @@
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
-                <label asp-for="Id1" class="control-label"></label>
-                <input asp-for="Id1" class="form-control" />
-                <span asp-validation-for="Id1" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="MoedaOrigemId" class="control-label"></label>
+                <input asp-for="MoedaOrigemId" class="form-control" />
+                <span asp-validation-for="MoedaOrigemId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Id2" class="control-label"></label>
-                <input asp-for="Id2" class="form-control" />
-                <span asp-validation-for="Id2" class="text-danger"></span>
-            </div> *@
+                <label asp-for="MoedaAlvoId" class="control-label"></label>
+                <input asp-for="MoedaAlvoId" class="form-control" />
+                <span asp-validation-for="MoedaAlvoId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ValorDeVenda" class="control-label"></label>
+                <input asp-for="ValorDeVenda" class="form-control" />
+                <span asp-validation-for="ValorDeVenda" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ValorDeCompra" class="control-label"></label>
+                <input asp-for="ValorDeCompra" class="form-control" />
+                <span asp-validation-for="ValorDeCompra" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
