--- a/Views/Monitoramento/Edit.cshtml
+++ b/Views/Monitoramento/Edit.cshtml
@@ -1,7 +1,11 @@
+@using MvcMoeda.Models
 @model MvcMonitoramento.Models.Monitoramento
 
 @{
     ViewData["Title"] = "Edit";
+    var moedas = (IEnumerable<Moeda>) ViewData["Moedas"];
+    var monitoramento = Model;
+    Console.WriteLine(monitoramento.MoedaAlvoId);
 }
 
 <h1>Edit</h1>
@@ -19,14 +23,37 @@
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
+
                 <label asp-for="MoedaOrigemId" class="control-label"></label>
-                <input asp-for="MoedaOrigemId" class="form-control" />
-                <span asp-validation-for="MoedaOrigemId" class="text-danger"></span>
+                <select name="MoedaOrigemId" id="MoedaOrigemId">
+                    
+                    @foreach (var moeda in moedas){
+                        @if (monitoramento.MoedaOrigemId == moeda.Id) {
+
+                            <option value="@moeda.Id" selected="true">@moeda.Nome</option> 
+                        } else
+                        {
+                            <option value="@moeda.Id" >@moeda.Nome</option> 
+                        }
+                    }
+                </select>
             </div>
+
             <div class="form-group">
+
                 <label asp-for="MoedaAlvoId" class="control-label"></label>
-                <input asp-for="MoedaAlvoId" class="form-control" />
-                <span asp-validation-for="MoedaAlvoId" class="text-danger"></span>
+                <select name="MoedaAlvoId" id="MoedaAlvoId">
+                    
+                    @foreach (var moeda in moedas){
+                        @if (monitoramento.MoedaAlvoId == moeda.Id) {
+
+                            <option value="@moeda.Id" selected="true">@moeda.Nome</option> 
+                        } else
+                        {
+                            <option value="@moeda.Id" >@moeda.Nome</option> 
+                        }
+                    }
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="ValorDeVenda" class="control-label"></label>
