--- a/Views/Monitoramento/Create.cshtml
+++ b/Views/Monitoramento/Create.cshtml
@@ -3,13 +3,17 @@
 
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
     var moedas = (IEnumerable<Moeda>) ViewData["Moedas"];
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Monitoramento</h4>
+<div style="display: flex;  justify-content: space-between;">
+    <h4>Monitoramento</h4>
+    <a class=" action-button detalhar_button" href="/Moedas">Criar Moeda</a>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -20,26 +24,28 @@
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="div-flex-itens">
+                <div class="form-group">
 
-                <label asp-for="MoedaOrigemId" class="control-label"></label>
-                <select name="MoedaOrigemId" id="MoedaOrigemId">
-                    
-                    @foreach (var moeda in moedas){
-                        <option value="@moeda.Id">@moeda.Nome</option>
-                    }
-                </select>
-            </div>
+                    <label asp-for="MoedaOrigemId" class="control-label"></label>
+                    <select name="MoedaOrigemId" id="MoedaOrigemId">
+                        
+                        @foreach (var moeda in moedas){
+                            <option value="@moeda.Id">@moeda.Nome</option>
+                        }
+                    </select>
+                </div>
 
-            <div class="form-group">
+                <div class="form-group">
 
-                <label asp-for="MoedaAlvoId" class="control-label"></label>
-                <select name="MoedaAlvoId" id="MoedaAlvoId">
-                    
-                    @foreach (var moeda in moedas){
-                        <option value="@moeda.Id">@moeda.Nome</option>
-                    }
-                </select>
+                    <label asp-for="MoedaAlvoId" class="control-label"></label>
+                    <select name="MoedaAlvoId" id="MoedaAlvoId">
+                        
+                        @foreach (var moeda in moedas){
+                            <option value="@moeda.Id">@moeda.Nome</option>
+                        }
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="ValorDeVenda" class="control-label"></label>
@@ -51,15 +57,15 @@
                 <input asp-for="ValorDeCompra" class="form-control" />
                 <span asp-validation-for="ValorDeCompra" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group submits-button">
+                <input type="submit" value="Salvar" class="detalhar_button" />
+                <a asp-action="Index" class="action-button excluir_button">Voltar</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
